0.21.2 - fixing mobile visual bugs
On mobile, the form overlaps with other elements and the navbar elements are close to each other. This is a fix for that

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -4,7 +4,7 @@
     display: flex;
         align-items: center;
         justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 80px;
